[package]
name = "llm_stream"
version = "0.1.1"
edition = "2021"


[dependencies]
# for candle
candle = { git = "https://github.com/huggingface/candle.git", branch = 'main', package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = 'main' }
candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = 'main' }
candle-flash-attn = { git = "https://github.com/huggingface/candle.git", branch = 'main', optional = true }

# for huggingface
hf-hub = { version = "0.3.0", features = ["tokio"] }
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
#tokenizers = { version = "0.15.0", default-features = false }


# for acceleration
#accelerate-src = { version = "0.3.2" , optional = true}
intel-mkl-src = { version = "0.8.1", features = [
  "mkl-static-lp64-iomp",
], optional = true }
# for mkl feature
#libc = { version = "0.2.147" }

cudarc = { version = "0.9.14", features = ["f16"], optional = true }

half = { version = "2.3.1", features = [
  "num-traits",
  "use-intrinsics",
  "rand_distr",
], optional = true }
rayon = "1.7.0"
safetensors = "0.3.1"
num-traits = "0.2.15"


# for warp layer
warp = "0.3"
hyper = { version = "0.14", features = [
  "stream",
  "server",
  "http1",
  "http2",
  "tcp",
  "client",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.1"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
] }
futures-channel = { version = "0.3.17", features = ["sink"] }

#toml
toml = "0.8.8"


# error mgmgt
anyhow = { version = "1" }
thiserror = "1"

#config
twelf = { version = "0.15.0", features = ["toml", "env", "cli"] }

clap = { version = "4.2.4", features = ["derive"] }
bytes = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"


bindgen_cuda = { version = "0.1.1", optional = true }


[features]
default = []
mistral = []
phi-v2 = []
llama = []
#accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = [
  "dep:intel-mkl-src",
  "candle/mkl",
  "candle-nn/mkl",
  "candle-transformers/mkl",
]
cuda = [
  "candle/cuda",
  "candle-nn/cuda",
  "candle-transformers/cuda",
  "dep:bindgen_cuda",
]
cudnn = ["candle/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
nccl = ["cuda", "cudarc/nccl", "dep:half"]
